Se agrego boton y formulario

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<title>Probando GIT por BASH</title>
 	</head>
 	<body>
-		<h1>Titulo papurri</h1>
+		<h1>Titulo papurri nuevesito</h1>
+		<form action="#" method="get">
+			<input type="button" value="Enviar">
+		</form>
 	</body>
 </html>
